<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buzzter</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="menu_search">Buscar</string>
    <string name="menu_publicacion">Publicar</string>
    <string name="menu_mensaje">Mensaje</string>
    <string name="menu_logout">Cerrar sesión</string>
    
    <string name="tab_noticias">NOTICIAS</string>
    <string name="tab_perfil">PERFIL</string>
    
    <string name="publicacion_escrito">Por </string>
    <string name="publicacion_detail_estrellas">Vota esta publicación:</string>
    <string name="publicacion_detail_votos">Promedio de votos:</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="prueba_usuario">JEscalante</string>
    <string name="prueba_tipo">Serie</string>
    <string name="prueba_tiempo">Hace 30 min</string>
    <string name="prueba_titulo">Titulo primera publicación</string>
    <string name="prueba_descripcion">Una pequeña descripción aqui.....</string>
    <string name="prueba_comentarios">10</string>
    <string name="prueba_likes">5</string>
    <string name="prueba_ver_mas">ver más</string>
    <string name="prueba_comentario">Comentario cualquier cosaComentario cualquier cosaComentario cualquier cosaComentario cualquier cosaComentario cualquier cosaComentario cualquier cosa</string>
    <string name="title_activity_prueba">Prueba</string>
	
    <string-array name="array_publicaciones">
        <item>Chromecast ya disponible en España por 35€</item>
        <item>Pocket llega en español, analizando mejor los artículos guardados</item>
        <item>Pixar ya está trabajando en The Incredibles 2 y Cars 3</item>
        <item>Metal Gear Solid V: Ground Zeroes se puede completar en apenas 10 minutos</item>
    </string-array>
    
    <string name="imagen_login">buzzter</string>
	<string name="login_buzzter">buzzter</string>
	<string name="login_email">Correo electronico</string>
	<string name="login_password">Contraseña</string>
	<string name="login_login">Iniciar sesion</string>
	<string name="login_registrate">Registrate en Buzzter</string>
	
	<string name="registro_registro">Registro</string>
	<string name="registro_descripcion">Una breve descripcion del servicio
	    								como funciona? Datos necesarios? etc</string>
	<string name="registro_user">Nombre de usuario</string>
	<string name="registro_email">Correo electronico</string>
	<string name="registro_password">Contraseña</string>
	<string name="registro_confirm_password">Repita la contraseña</string>
	<string name="registro_registrar">Registrarse en Buzzter</string>
	<string name="imagen_registro">foto</string>
	
	<string name="crear_publicacion_titulo">Titulo de la publicacion:</string>
	<string name="crear_publicacion_descripcion">Descripcion:</string>
	<string name="crear_publicacion_tipo">Tipo de publicacion:</string>
	<string name="crear_publicacion_linkImg">Link de la imagen:</string>
	<string name="crear_publicacion_link">Fuente:</string>
	
	<string name="crear_publicacion_publicar">Publicar</string>
	<string name="crear_publicacion_error">....</string>
	
	<string-array name="array_TipoPublicacion">
        <item>Musica</item>
        <item>Pelicula</item>
        <item>Libro</item>
        <item>Otros</item>
    </string-array>
	
	<string name="timeline_cargando_posts">Espera un ratito, tu timeline se esta cargando :)</string>
	<string name="timeline_error_posts">Oops no se cargaron las publicaciones correctamente</string>
</resources>
