<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical" >
    
    <LinearLayout 
    	android:layout_width="match_parent"
   	 	android:layout_height="wrap_content"
    	android:orientation="vertical">
        
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_publicacion_titulo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/Publicacion_Titulos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_publicacion_descripcion"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
	    android:id="@+id/crear_publicacion_descripcion"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:inputType="textMultiLine" />
	 
    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_publicacion_tipo"
            android:textAppearance="?android:attr/textAppearanceMedium" />
	 
    <Spinner
        android:id="@+id/Publicacion_Tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/array_TipoPublicacion" />
    
     <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_publicacion_linkImg"
            android:textAppearance="?android:attr/textAppearanceMedium" />
     <EditText
	    android:id="@+id/crear_publicacion_linkImg"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10" 
	    android:inputType="textUri" />
     
	<TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_publicacion_link"
            android:textAppearance="?android:attr/textAppearanceMedium" />
     <EditText
	    android:id="@+id/crear_publicacion_link"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10" 
	    android:inputType="textUri" />
     
    <Button
        android:id="@+id/Publicacion_Publicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/crear_publicacion_publicar" />

    <TextView
        android:id="@+id/Publicacion_Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_publicacion_error"
        android:textAppearance="?android:attr/textAppearanceSmall" />
	</LinearLayout>
</ScrollView>
