<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#FFF">
	
	<ImageView
    	android:id="@+id/img_publicacion_imagen"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:layout_weight="1"
        android:src="@drawable/ic_launcher"
        android:background="#AAA" />

      	<LinearLayout
        	android:layout_width="0dp"
          	android:layout_height="wrap_content"
          	android:orientation="vertical"
          	android:layout_weight="2">       	
          	<TextView
          		android:id="@+id/txt_publicacion_titulo"
          		android:layout_width="match_parent"
		      	android:layout_height="wrap_content"
		        android:text="@string/prueba_titulo"
		        android:layout_marginTop="5dp"
		        android:paddingLeft="5dp"
		        android:textAppearance="?android:attr/textAppearanceLarge" />			
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_marginTop="5dp"
	          	android:paddingLeft="5dp" >
	          	
	          	<TextView
	            	android:id="@+id/txt_publicacion_tipo"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="@drawable/shape"
	                android:padding="5dp"
	                android:text="@string/prueba_tipo"
	                android:textAppearance="?android:attr/textAppearanceSmallInverse"
	                android:textColor="@color/activity_background" />
				<TextView
	                android:id="@+id/txt_publicacion_tiempo"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:paddingLeft="10dp"
	                android:text="@string/prueba_tiempo"
	                android:textAppearance="?android:attr/textAppearanceSmall" />
	      </LinearLayout>
          <LinearLayout
          	android:layout_width="match_parent"
          	android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
          	android:paddingLeft="5dp">
            <TextView
            	android:id="@+id/txt_publicacion_escrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publicacion_escrito"
                android:textAppearance="?android:attr/textAppearanceMedium" />
          	<TextView
                android:id="@+id/txt_publicacion_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prueba_usuario"
                android:paddingLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
          </LinearLayout>
          
         <LinearLayout 
         	android:layout_width="match_parent"
     	 	android:layout_height="wrap_content"
     	 	android:orientation="horizontal"
     	 	android:background="#F0F0F0" 
     	 	android:padding="5dp">
           <ImageView
           		android:id="@+id/img_star"
           		android:layout_width="24dp"
           		android:layout_height="24dp"
           		android:layout_marginRight="2dp"
           		android:src="@drawable/ic_action_important" />

       		<TextView
       	    	android:id="@+id/txt_publicacion_votos"
	       	    android:layout_width="wrap_content"
	       	    android:layout_height="match_parent"
	       	    android:gravity="center"
	       	    android:text="@string/prueba_likes"
	       	    android:textAppearance="?android:attr/textAppearanceSmall" />

	       	<ImageView
	           	android:id="@+id/img_comments"
	           	android:layout_width="24dp"
	           	android:layout_height="24dp"
	           	android:layout_marginLeft="10dp"
	           	android:layout_marginRight="2dp"
	           	android:src="@drawable/ic_action_chat" />
	       	<TextView
	       	    android:id="@+id/txt_publicacion_numero_comentarios"
	           	android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	       	    android:gravity="center"
	            android:text="@string/prueba_comentarios"
	            android:textAppearance="?android:attr/textAppearanceSmall" /> 
      	</LinearLayout>
  	</LinearLayout>     	
</LinearLayout>