<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="#FFF" >

        <ImageView
            android:id="@+id/img_publicacion_detail_avatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_publicacion_detail_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prueba_usuario"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txt_publicacion_detail_tipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:padding="5dp"
                    android:text="@string/prueba_tipo"
                    android:textAppearance="?android:attr/textAppearanceSmallInverse" />

                <TextView
                    android:id="@+id/txt_publicacion_detail_tiempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/prueba_tiempo"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="#FFF" >

        <TextView
            android:id="@+id/txt_publicacion_detail_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/prueba_titulo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txt_publicacion_detail_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prueba_descripcion"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <ImageView
            android:id="@+id/img_publicacion_detail_imagen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDD"
        android:orientation="vertical"
        android:padding="5dp">
		    <TextView
            android:id="@+id/txt_publicacion_detail_estrellas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/publicacion_detail_estrellas"
            android:textAppearance="?android:attr/textAppearanceSmall" />
		    <RatingBar
            android:id="@+id/ratingBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
		    
		    <TextView
	          android:id="@+id/txt_publicacion_detail_texto_votos"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:gravity="center"
	          android:text="@string/publicacion_detail_votos"
	          android:textAppearance="?android:attr/textAppearanceSmall" />
		    <TextView
            android:id="@+id/txt_publicacion_detail_votos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" 
            android:text="3,5 votos"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
	
    <ListView
        android:id="@+id/list_publicacion_detail_comentarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">
    </ListView>

</LinearLayout>